# evidence_test

./: .env.example  .gitignore  BUILD_ACTION_ANALYSIS.md  GITHUB_REDESIGN_SUMMARY.md  MIGRATION_SUMMARY.md  README.md  SETUP_GITHUB_STARRED_REPOS.md  deploy.yaml  evidence.config.yaml  example_stack_report.md  fetch_jobs.yaml  package-lock.json  package.json  plan.txt  pyproject.toml  repomix-output.xml  requirements.txt  run_fetch.py  test.ipynb
.evidence/customization/: .profile.json
.github/workflows/: deploy.yaml  deploy.yml  fetch.yaml  starred-repos-sync.yaml
pages/: +layout.svelte  index.md  recommendations.md  spoti.md  starred.md
pages/github/: lists.md  recommendations.md  starred-repos.md  starred.md
pages/github_2/: recommendations.md  starred.md
pages/imdb/: imdb.md  movies.md  tvseries.md
pages/spoti/: spoti.md
scripts/: README_Lists_Feature.md  github_sync.py  lists_config.py  repo_recommender.py  starred_fetcher.py  starred_lists_fetcher.py  starred_lists_scrapped.py  starred_repos_fetcher.py  test_motherduck.py
sources/github/: connection.yaml  lists.sql  recommendations.sql  starred.sql
sources/github_2/: connection.yaml
sources/github_starred/: connection.yaml  starred_repos.sql
sources/imdb/: connection.yaml  imdb.sql  movies.sql  tvseries.sql
sources/spoti/: connection.yaml  spoti.sql
